--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.11.15",
+    "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "apisauce": "^2.1.2",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
     "native-base": "^3.2.1",
