--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^1.6.2",
     "apisauce": "^2.1.2",
     "expo": "~43.0.0",
+    "expo-secure-store": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "native-base": "^3.2.1",
     "react": "17.0.1",
@@ -27,11 +29,13 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-redux": "^7.1.20"
   },
   "private": true
 }
