--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
+    "react-native-toast-message": "^2.0.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "styled-components": "^5.3.3",
