--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
-    "react-native-toast-message": "^2.0.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "styled-components": "^5.3.3",
